tests/ui/failing/init-large-type.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/codegen/init-large-type.rs`
warning: the feature `intrinsics` is internal to the compiler or standard library
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/codegen/init-large-type.rs:12:12
   |
12 | #![feature(intrinsics)]
   |            ^^^^^^^^^^
   |
   = note: using it is strongly discouraged
   = note: `#[warn(internal_features)]` on by default


thread 'rustc' has overflowed its stack
fatal runtime error: stack overflow
Aborted (core dumped)
